# correccion_prueba02_santamaria_romero_joan

./: CMakeLists.txt  arial_ttf.h  arial_ttf2.h  draw_text.cpp  fractal_burning_mpi.cpp  fractal_burning_mpi.h  fractal_mpi.cpp  fractal_mpi.h  fractal_newton_mpi.cpp  fractal_newton_mpi.h  main.cpp  main_burning.cpp  main_newton.cpp  palette.cpp  palette.h
